--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "4.2.2",
     "stimulus": "^1.1.1",
     "tailwindcss": "^1.2.0",
+    "tippy.js": "^6.1.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0"
